--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "framework": null,
   "rewrites": [
     {
-      "source": "/((?!assets/|.*\\..*).*)",
+      "source": "/:path*",
       "destination": "/index.html"
     }
   ]
